# gravity-remote-device-management

./: .gitlab-ci.yml  CMakeLists.txt  README.md  remotedevicemanagementconfig.h.in
share/: com.ispirata.Hemera.RemoteDeviceManagement.Events.json  com.ispirata.Hemera.RemoteDeviceManagement.json
src/: CMakeLists.txt  RemoteDeviceManagement.cpp  RemoteDeviceManagement.h  RemoteDeviceManagementPlugin.cpp  RemoteDeviceManagementPlugin.h
